--- a/resources/views/index.html
+++ b/resources/views/index.html
@@ -6,8 +6,7 @@
     <base href="/"/>
     <!-- JS -->
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
-    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.js"></script>
-    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-route.js"></script>
+    <script src="js/angular.js"></script>
 
     <!-- Latest compiled and minified CSS -->
     <!-- load bootstrap via cdn -->
