--- a/resources/views/index.html
+++ b/resources/views/index.html
@@ -4,25 +4,9 @@
     <meta charset="UTF-8">
     <title>Power Jump</title>
     <base href="/"/>
-    <!-- JS -->
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
-    <script src="js/angular.js"></script>
-
-    <!-- Latest compiled and minified CSS -->
-    <!-- load bootstrap via cdn -->
+    <script src="js/all.js"></script>
     <link rel="stylesheet" href="css/all.css" />
-
-
-
-    <!-- load angular -->
-    <!-- ANGULAR -->
-    <!-- all angular resources will be loaded from the /public folder -->
-    <script src="js/controllers/eventController.js"></script>
-    <!-- load our controller -->
-    <script src="js/services/eventService.js"></script>
-    <!-- load our service -->
-    <script src="js/app.js"></script>
-    <!-- load our application -->
 
 </head>
 <!-- declare our angular app and controller -->
