--- a/resources/views/index.html
+++ b/resources/views/index.html
@@ -6,7 +6,7 @@
     <base href="/"/>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
     <script src="js/all.js"></script>
-    <link rel="stylesheet" href="css/all.css" />
+    <link rel="stylesheet" href="css/all.css"/>
 
 </head>
 <!-- declare our angular app and controller -->
@@ -15,15 +15,15 @@
 <div class="navbar navbar-default">
     <div class="container">
         <div class="navbar-header">
-            <a href="/" class="navbar-brand">Администраторски панел</a>
+            <a ui-sref="home" class="navbar-brand">Администраторски панел</a>
         </div>
         <div class="navbar-collapse collapse" id="navbar-main">
             <ul class="nav navbar-nav">
                 <li>
-                    <a href="#">Проекти</a>
+                    <a ui-sref="project">Проекти</a>
                 </li>
                 <li>
-                    <a href="event">Събития</a>
+                    <a ui-sref="event">Събития</a>
                 </li>
             </ul>
             <ul class="nav navbar-nav pull-right">
@@ -35,10 +35,9 @@
 </div>
 
 
+<div ui-view>
 
-    <div ng-view>
-
-    </div>
+</div>
 
 
 </div>
