--- a/public/assets/css/structure.css
+++ b/public/assets/css/structure.css
@@ -24,30 +24,30 @@ h2{font-family:'Varela',sans-serif}
 .blue_bg{background-color:#09c}
 .blue_btn{background-color:#09c; color:#fff}
 .blue_btn:hover{background-color:#39c8f7; color:#fff}
-#header{float:left; display:inline; width:100%; }
-.navbar{margin-bottom:0; width:80%; float:left}
-.navbar-default{background-color:#3b3b3b; border-color:#3b3b3b}
-.navbar-brand{font-family:'Eddie'; font-size:23px; -webkit-transition:all 0.5s; -o-transition:all 0.5s; transition:all 0.5s}
-.navbar-brand > span{color:#ffd62c}
-.navbar-brand:hover{opacity:0.75}
-.custom_nav li{border-right:1px solid #161616}
-.custom_nav li a{color:#fff !important; font-size:14px; font-weight:bold; padding:15px 10px; text-transform:uppercase; -webkit-transition:all 0.5s; -o-transition:all 0.5s; transition:all 0.5s}
-.navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus{background:none repeat scroll 0 0 #ffd62c; color:#333; outline:none}
-.navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .open > a:hover, .navbar-default .navbar-nav > .open > a:focus{background-color:#ffd62c; color:#555}
-.navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus{background-color:#ffd62c; border-color:#ffd62c}
-.navbar-default .navbar-toggle{border-color:#ffd62c}
-.navbar-default .navbar-collapse, .navbar-default .navbar-form{border-color:#ffd62c}
-.navbar-collapse.in{overflow-x:hidden}
-.custom_nav > li:nth-child(1) > a{background:none repeat scroll 0 0 #ffd62c}
-.custom_nav > li:nth-child(2) > a{background:none repeat scroll 0 0 #e76b33}
-.custom_nav > li:nth-child(3) > a{background:none repeat scroll 0 0 #7dc34d}
-.custom_nav > li:nth-child(4) > a{background:none repeat scroll 0 0 #09c}
-.dropdown-menu{background-color:#3b3b3b; padding:0}
-.dropdown-menu li a{border-top:1px solid #222}
-.dropdown-menu li:first-child a{border-top:none}
-.dropdown-menu > li a{font-size:12px; font-weight:normal; text-transform:capitalize}
-.dropdown-menu > li a:hover{background-color:#09c}
-.dropdown_level2{margin-left:100%}
+/*#header{float:left; display:inline; width:100%; }*/
+/*.navbar{margin-bottom:0; width:80%; float:left}*/
+/*.navbar-default{background-color:#3b3b3b; border-color:#3b3b3b}*/
+/*.navbar-brand{font-family:'Eddie'; font-size:23px; -webkit-transition:all 0.5s; -o-transition:all 0.5s; transition:all 0.5s}*/
+/*.navbar-brand > span{color:#ffd62c}*/
+/*.navbar-brand:hover{opacity:0.75}*/
+/*.custom_nav li{border-right:1px solid #161616}*/
+/*.custom_nav li a{color:#fff !important; font-size:14px; font-weight:bold; padding:15px 10px; text-transform:uppercase; -webkit-transition:all 0.5s; -o-transition:all 0.5s; transition:all 0.5s}*/
+/*.navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus{background:none repeat scroll 0 0 #ffd62c; color:#333; outline:none}*/
+/*.navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .open > a:hover, .navbar-default .navbar-nav > .open > a:focus{background-color:#ffd62c; color:#555}*/
+/*.navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus{background-color:#ffd62c; border-color:#ffd62c}*/
+/*.navbar-default .navbar-toggle{border-color:#ffd62c}*/
+/*.navbar-default .navbar-collapse, .navbar-default .navbar-form{border-color:#ffd62c}*/
+/*.navbar-collapse.in{overflow-x:hidden}*/
+/*.custom_nav > li:nth-child(1) > a{background:none repeat scroll 0 0 #ffd62c}*/
+/*.custom_nav > li:nth-child(2) > a{background:none repeat scroll 0 0 #e76b33}*/
+/*.custom_nav > li:nth-child(3) > a{background:none repeat scroll 0 0 #7dc34d}*/
+/*.custom_nav > li:nth-child(4) > a{background:none repeat scroll 0 0 #09c}*/
+/*.dropdown-menu{background-color:#3b3b3b; padding:0}*/
+/*.dropdown-menu li a{border-top:1px solid #222}*/
+/*.dropdown-menu li:first-child a{border-top:none}*/
+/*.dropdown-menu > li a{font-size:12px; font-weight:normal; text-transform:capitalize}*/
+/*.dropdown-menu > li a:hover{background-color:#09c}*/
+/*.dropdown_level2{margin-left:100%}*/
 #searchForm{float:right; margin-top:8px; width:20%; height:auto}
 #searchForm input[type="text"]{background-color:#282828; border:0 none; color:#fff; float:left; font-size:13px; height:35px; outline:0 none; padding:5px 5px 5px 10px; width:85.5%}
 #searchForm input[type="submit"]{background:url("img/btn_search.png") repeat scroll 0 0 rgba(0,0,0,0); border:0 none; float:right; font-size:0; height:35px; width:35px; -webkit-transition:all 0.5s; -o-transition:all 0.5s; transition:all 0.5s}
@@ -104,10 +104,10 @@ h2{font-family:'Varela',sans-serif}
 .poplr_tagnav li{}
 .poplr_tagnav li a{background-color:#fff; color:#bbb7b7; display:inline-block; float:left; margin-bottom:10px; margin-right:5px; padding:6px 12px; -webkit-transition:all 0.5s; -o-transition:all 0.5s; transition:all 0.5s}
 .poplr_tagnav li a:hover{background-color:#ffd62c; color:#fff; text-decoration:none}
-#footer{float:left; display:inline; width:100%; background:none repeat scroll 0 0 #3b3b3b; border-bottom:5px solid #282828; border-top:5px solid #282828}
-.footer_inner{float:left; display:inline; width:100%; padding:10px 0}
-.footer_inner p{color:#fff; font-size:13px}
-.footer_inner p a:hover{color:#ffd62c; text-decoration:none; border-bottom:1px solid #ffd62c}
+/*#footer{float:left; display:inline; width:100%; background:none repeat scroll 0 0 #3b3b3b; border-bottom:5px solid #282828; border-top:5px solid #282828}*/
+/*.footer_inner{float:left; display:inline; width:100%; padding:10px 0}*/
+/*.footer_inner p{color:#fff; font-size:13px}*/
+/*.footer_inner p a:hover{color:#ffd62c; text-decoration:none; border-bottom:1px solid #ffd62c}*/
 .singlepost_area{float:left; display:inline; width:100%}
 .singlepost_content{background-color:#fff; display:inline; float:left; margin-bottom:25px; margin-left:15px; padding:20px; width:95%}
 .singlepost_content img{margin-top:15px; margin-bottom:15px}
@@ -141,7 +141,7 @@ h2{font-family:'Varela',sans-serif}
 .similar_post_area > h2 i{color:#ffd62c; display:inline-block; font-size:25px; margin-left:5px; margin-top:5px}
 .similarpost_nav{text-align:center}
 .similarpost_nav li{display:inline-block; width:30%; float:none; margin:0 1%}
-.scrollToTop{background:none repeat scroll 0 0 #FFD200; border:1px solid #FFF; bottom:105px; color:#FFF; display:none; font-size:32px; font-weight:bold; height:50px; position:fixed; right:75px; text-align:center; text-decoration:none; width:50px; z-index:9999; -webkit-transition:all 0.5s; -moz-transition:all 0.5s; -ms-transition:all 0.5s; -o-transition:all 0.5s; transition:all 0.5s}
+.scrollToTop{background:none repeat scroll 0 0 #2fa4e7; border:1px solid #FFF; bottom:105px; color:#FFF; display:none; font-size:32px; font-weight:bold; height:50px; position:fixed; right:75px; text-align:center; text-decoration:none; width:50px; z-index:9999; -webkit-transition:all 0.5s; -moz-transition:all 0.5s; -ms-transition:all 0.5s; -o-transition:all 0.5s; transition:all 0.5s}
 .scrollToTop:hover, .scrollToTop:focus{background-color:#09c; color:#FFF !important; text-decoration:none; outline:none}
 #preloader{position:fixed; top:0; left:0; right:0; bottom:0; background-color:#fff; z-index:99}
 #status{width:200px; height:200px; position:absolute; left:50%; top:50%; background-image:url("img/status.gif"); background-repeat:no-repeat; background-position:center; margin:-100px 0 0 -100px}
