--- a/public/assets/css/structure.css
+++ b/public/assets/css/structure.css
@@ -13,7 +13,7 @@ body{background-color:#f9f9f9; color:#444; overflow-x:hidden}
 ul{padding:0; margin:0; list-style:none}
 a{text-decoration:none; color:#666}
 a:hover{color:#272727}
-h2{font-family:'Varela',sans-serif}
+h2{font-family: 'Alegreya', serif;}
 .img-center{display:block; margin-left:auto; margin-right:auto; text-align:center}
 .img-right{display:block; margin-left:auto}
 .img-left{display:block; margin-right:auto}
@@ -59,7 +59,7 @@ h2{font-family:'Varela',sans-serif}
 .single_stuff_img{float:left; display:inline; width:100%}
 .single_stuff_img a{display:block; -webkit-transition:all 0.5s; -o-transition:all 0.5s; transition:all 0.5s}
 .single_stuff_img img{max-width:100%}
-.single_stuff_article{float:left; display:inline; width:100%; background-color:#fff; border-bottom:1px solid #bebebd; border-left:1px solid #e3e3e3; border-right:1px solid #bebebd}
+.single_stuff_article{float:left; display:inline; width:100%; background-color:#fff; box-shadow: 2px 4px 5px #bebebd;}
 .single_sarticle_inner{background-color:#fff; display:inline; float:left; margin:-60px 20px 0; padding:10px 20px; width:auto}
 .stuff_category{color:#444; display:inline-block; font-size:10px; outline:medium none; text-decoration:none; text-transform:uppercase}
 .stuff_article_inner{float:left; display:inline; width:100%}
@@ -77,22 +77,23 @@ h2{font-family:'Varela',sans-serif}
 .newstuff_pagnav li{display:inline-block}
 .newstuff_pagnav li a{display:inline-block; background:none repeat scroll 0 0 #333; border-radius:5px; color:white; margin:0 2px 0 0; padding:10px 15px; -webkit-transition:all 0.5s; -o-transition:all 0.5s; transition:all 0.5s}
 .newstuff_pagnav li a:hover, .newstuff_pagnav li a:focus, .newstuff_pagnav li a.active_page{background-color:#ffd62c; outline:none}
-.middlebar_content_inner{border-left:1px solid #bebebd; border-right:1px solid #bebebd; display:inline; float:left; padding:25px 15px 20px; width:100%}
+.middlebar_content_inner{box-shadow: 0px 0px 2px #bebebd; display:inline; float:left; padding:25px 15px 20px; width:100%}
+.tmbnl{box-shadow: 0px 0px 2px #bebebd;}
 .middlebar_nav{padding:0; margin:0}
 .middlebar_nav li{display:block; float:left; margin-bottom:15px; width:100%}
 .mbar_thubnail{display:block; float:left; height:auto; margin-right:10px; width:30%}
 .mbar_thubnail > img{max-width:100%}
 .mbar_title{color:#666; display:inline-block; float:left; font-size:15px; margin-top:5px; width:65%}
-.popular_categori{float:left; display:inline; width:100%; border-left:1px solid #bebebd; border-right:1px solid #bebebd}
+.popular_categori{float:left; display:inline; width:100%; box-shadow: 0px 0px 2px #bebebd;}
 .popular_categori > h2{border-bottom:1px solid #e3e3e3; border-top:1px solid #e3e3e3; color:#fff; float:left; font-size:16px; font-weight:bold; line-height:32px; margin:0; padding:5px 25px; width:100%}
 .poplr_catgnva{float:left; padding:20px 15px; width:100%}
 .poplr_catgnva li{display:block; width:100%; margin-bottom:10px}
-.poplr_catgnva li a{display:block; font-size:15px; text-decoration:none; font-family:arial}
+.poplr_catgnva li a{display:block; font-size:15px; text-decoration:none; font-family: 'Alegreya', serif;}
 .poplr_catgnva li a:hover{color:#7dc34d}
 .single_blog_sidebar{float:left; display:inline; width:100%; padding:0 25px}
 .single_blog_sidebar > h2{background:none repeat scroll 0 0 white; border-bottom:1px solid #e3e3e3; border-top:1px solid #e3e3e3; font-size:16px; font-weight:bold; line-height:32px; margin:0 0 25px -25px; padding:5px 25px; width:116%}
 .featured_nav{}
-.featured_nav li{float:left; width:100%; background-color:#fff; padding-bottom:32px; border-left:1px solid #bebebd; border-right:1px solid #bebebd; border-bottom:1px solid #bebebd; margin-bottom:36px}
+.featured_nav li{float:left; width:100%; background-color:#fff; padding-bottom:32px; box-shadow: 2px 4px 5px #bebebd; margin-bottom:36px}
 .featured_img{display:block}
 .featured_img img{max-width:100%}
 .featured_title{background:none repeat scroll 0 0 white; margin:0 15px; position:relative}
@@ -112,8 +113,8 @@ h2{font-family:'Varela',sans-serif}
 .singlepost_content{background-color:#fff; display:inline; float:left; margin-bottom:25px; margin-left:15px; padding:20px; width:95%}
 .singlepost_content img{margin-top:15px; margin-bottom:15px}
 .singlepost_content h2{font-size:24px; line-height:1.5em; margin:0; padding:5px 0 0}
-.singlepost_content p{background-color:white; border:0 none; color:#333; font-family:Arial,sans-serif; font-size:13px; line-height:20.8px; margin:0 0 10px; padding:0; text-align:justify; vertical-align:baseline}
-.singlepost_content blockquote{font-family:arial; font-style:italic}
+.singlepost_content p{background-color:white; border:0 none; color:#333; font-family: 'Alegreya', serif; font-size:13px; line-height:20.8px; margin:0 0 10px; padding:0; text-align:justify; vertical-align:baseline}
+.singlepost_content blockquote{font-family: 'Alegreya', serif; font-style:italic}
 .singlepost_content > ul{padding-left:15px}
 .singlepost_content > ul li{background-image:url("img/arrow_icon.png"); background-repeat:no-repeat; background-position:left center; padding-left:20px; margin-bottom:8px}
 .singlepost_content > ul li:hover{opacity:0.50}
