--- a/public/assets/css/structure.css
+++ b/public/assets/css/structure.css
@@ -13,7 +13,7 @@ body{background-color:#f9f9f9; color:#444; overflow-x:hidden}
 ul{padding:0; margin:0; list-style:none}
 a{text-decoration:none; color:#666}
 a:hover{color:#272727}
-h2{font-family: 'Alegreya', serif;}
+h2{font-family: 'Alegreya', serif; margin-top: 0px;}
 .img-center{display:block; margin-left:auto; margin-right:auto; text-align:center}
 .img-right{display:block; margin-left:auto}
 .img-left{display:block; margin-right:auto}
@@ -118,7 +118,7 @@ h2{font-family: 'Alegreya', serif;}
 .singlepost_content > ul{padding-left:15px}
 .singlepost_content > ul li{background-image:url("img/arrow_icon.png"); background-repeat:no-repeat; background-position:left center; padding-left:20px; margin-bottom:8px}
 .singlepost_content > ul li:hover{opacity:0.50}
-.social_area{display:inline; float:left; margin-top:20px; padding:10px 0; width:100%}
+.social_area{display:inline; float:left; margin-top:0px; padding-bottom:10px; width:100%}
 .social_area ul{display:inline-block; text-align:center; width:100%}
 .social_area ul li{display:inline-block}
 .social_area ul li > a{background:none repeat scroll 0 0 grey; border-radius:50%; color:white; font-size:24px; margin:0 4px; padding:6px 12px; text-decoration:none; display:inline-block; -webkit-transition:all 0.5s; -o-transition:all 0.5s; transition:all 0.5s}
