--- a/public/assets/css/structure.css
+++ b/public/assets/css/structure.css
@@ -48,6 +48,9 @@ h2{font-family: 'Alegreya', serif; margin-top: 0px;}
 /*.dropdown-menu > li a{font-size:12px; font-weight:normal; text-transform:capitalize}*/
 /*.dropdown-menu > li a:hover{background-color:#09c}*/
 /*.dropdown_level2{margin-left:100%}*/
+.partners-title{
+    height: 70px;
+}
 #searchForm{float:right; margin-top:8px; width:20%; height:auto}
 #searchForm input[type="text"]{background-color:#282828; border:0 none; color:#fff; float:left; font-size:13px; height:35px; outline:0 none; padding:5px 5px 5px 10px; width:85.5%}
 #searchForm input[type="submit"]{background:url("img/btn_search.png") repeat scroll 0 0 rgba(0,0,0,0); border:0 none; float:right; font-size:0; height:35px; width:35px; -webkit-transition:all 0.5s; -o-transition:all 0.5s; transition:all 0.5s}
